Enable to draw network by name key tag
